# libcom

./: .gitattributes
COM/: .gitignore  LICENSE  Makefile.am  README  autodegen.sh  autogen.sh  configure.ac
COM/ManagedComBridge/: Makefile  Makefile.in  ManagedComBridge.cpp  ManagedComBridge.cproj  ManagedComBridge.csproj  ManagedComBridge.h
COM/include/: BasicTypes.h  COM.h  COMError.h  COMInterfaces.h  COMLibrary.h  COMPointers.h  COMSupport.h  Ole2.h  Oleacc.h  WinError.h  comdef.h  oaidl.h  ocidl.h  rpc.h  rpcndr.h
COM/remote-midl/: midl  tlbimp
COM/src/: COM.cpp  COMClasses.cpp  COMInterfaces.cpp  COMSupport.cpp  COMSupport.make  COMSupportInternals.h  ComRegistry.cpp  ComRegistry.h  GUID.cpp  Makefile.am  Memory.cpp  Registry.cpp  Util.cpp
COM/src/CodeWarrior/: COMSupportDebug.h  COMSupportFinal.h  COMSupportLibrary.mcp
COM/src/CodeWarrior/COMSuppLibDynamic/: COMSuppFrameworkFinal.h  COMSuppLibDynamic.mcp  COMSupportLibFramework.cp  COMSupportLibFramework.h
COM/src/CodeWarrior/COMSuppLibShared/: COMSuppLibShared.mcp  COMSupportDebug.h  COMSupportFinal.h  COMSupportFinalTest.h  COMSupportTest.h
COM/src/RegisterServer/: .gitignore  Makefile  Makefile.am  RegisterServer.cpp  generate-map.sh  make-map.sh
COM/test/: Bag.cpp  Bag.h  Bakery.cpp  Bakery.h  BakeryJarTestClient.cs  Ball.cpp  Ball.h  CClient.cc  ComClient.cs  IBag.idh  IBag.idl  IBagLib.idl  IBakery.idl  IBall.idh  IBall.idl  IWall.idl  Jar.cs  Jar_GUIDs.cpp  Makefile.am  TestCOMSupportLib.cpp  TestCOMSupportLib.h  TestCOMSupportLib.make  Tester.cs  Util.cpp  Wall.cpp  Wall.h  components.map  example_components.map  extract_iids.sh  fix-midl.sh  jar.tlh  jar.tli  test.sh  tools.h
COM/test/CodeWarrior/: COMSuppLibTest.h  COMSuppLibTest.mcp  COMSuppLibTest.r  COMSuppLibTestDebug.h  COMSuppLibTestDebugMach-O.h  COMSuppLibTestFinal.h  COMSuppLibTestFinalMach-O.h  TestCOMSupport.plc
COM/test/TestComponent/: Component.cpp  Component.h  ComponentGUIDs.cpp  ComponentInterfaces.h
COM/test/TestComponent/CodeWarrior/: Component.plc  ComponentDLLDebug.mcp  SharedLibrary.cp  TestApp.cp  carb.r
COM/test/include/: comdef.h  rpc.h
COM/test/raw-midl/: IBag.h  IBakery.h  IBakery_idl.h  IBall.h  IBall.tlb  IBall_idl.h  IBall_iid.h  IWall.h  README  jar.tlh  jar.tli
COM/unit-test/: Makefile  Makefile.in  TestCOM.cpp
Win32Base/: Makefile
Win32Base/include/: AfHacks.h  BasicTypes.h  COM.h  COMInterfaces.h  DateTime.h  ExtendedTypes.h  Hacks.h  MessageBox.h  Ole2.h  OleCtl.h  TextServices.h  Types.h  WinBase.h  WinError.h  WinSupport.h  msctf.h  olectl.h  windows.h  winnt.h  winuser.h
Win32Base/src/: .gitignore  COM.cpp  COMClasses.cpp  COMInterfaces.cpp  Hacks.cpp  Makefile  MessageBox.cpp  TextServices.cpp  Util.cpp  WinBase.cpp  WinSupport.cpp  WinSupportInternals.h
Win32Base/src/CodeWarrior/: WinSupportDebug.h  WinSupportFinal.h  WinSupportLibrary.mcp  WinSupportTest.h
Win32Base/src/CodeWarrior/WinSuppLibDynamic/: WinSuppFrameworkDebug.h  WinSuppFrameworkTest.h  WinSuppLibDynamic.mcp  WinSupportLibFramework.cp  WinSupportLibFramework.plc  WinSupportLibFramework.r
Win32Base/src/CodeWarrior/WinSuppLibShared/: WinSuppLibShared.mcp  WinSupportDebug.h  WinSupportFinal.h  WinSupportFinalTest.h
Win32Base/src/doc/: DateTimeOffset  DateTimeOffset.xls  Greenwich Mean Time offsets.htm  ReadMeWinSuppLib.txt
Win32Base/test/: Makefile  TestGUID.cpp  TestHacks.cpp  TestMessageBox.cpp  TestOutputDebugString.cpp  TestUtils.h  messageboxdouble  test.sh
Win32Base/test/TestWinSupportLib/: TestWinSupportLib.cp  TestWinSupportLib.h  TestWinSupportLib.mcp  WinFILETIME2002-06-14  WinFILETIME2002-06-14.out
Win32Base/test/WinSuppLibTest/: TestWinSupport.plc  TestWinSupportLib.cp  TestWinSupportLib.h  TestWinSupportLib.r  WinSuppLibTest.h  WinSuppLibTest.mcp  WinSuppLibTest.r  WinSuppLibTest.rsrc  WinSuppLibTestDebugMach-O.h  WinSuppLibTestFinal.h  WinSuppLibTestFinalMach-O.h  ostype.h  tmpl_cls.sql
Win32Base/test/WinTestWinSupport/: WinTestWinSupport.cpp  WinTestWinSupport.mcp  WinTestWinSupport2002-06-14.out
Win32More/: .gitignore
Win32More/include/: COMInterfacesMore.h  COMPointersMore.h  ErrorObjects.h  OleDb.h  SqlOleDb.h  TextServices.h  msctf.h  oaidl.h  ocidl.h  oledberr.h  rpc.h  rpcndr.h
Win32More/src/: .gitignore  COMInterfacesMore.cpp  ErrorObjects.cpp  Makefile  TextServices.cpp  ThreadLocalStorage.h
Win32More/test/: Makefile
