#
#	$Id$
#
#	COM Support Library root Automake file
#
#	MarkS - 2007-01-25
#
# COM Support Library
# Copyright (C) 2007 SIL International
#
# This library is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public
# License as published by the Free Software Foundation; either
# version 2.1 of the License, or (at your option) any later version.
#
# This library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with this library; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
#
# http://www.gnu.org/licenses/lgpl.html
#

# not a GNU package. You can remove this line, if
# have all needed files, that a GNU package needs
AUTOMAKE_OPTIONS = foreign 1.4

SUBDIRS = src unit-test test ManagedComBridge

EXTRA_DIST = \
	LICENSE \
	lgpl-2.1.txt \
	README \
	include/COM.h \
	include/COMInterfaces.h \
	include/COMLibrary.h \
	include/COMPointers.h \
	include/BasicTypes.h \
	include/WinError.h \
	include/oaidl.h \
	include/ocidl.h \
	include/Ole2.h \
	include/Oleacc.h \
	include/rpc.h \
	include/rpcndr.h \
	include/comdef.h \
	remote-midl/midl \
	remote-midl/tlbimp
